--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  text-align: center;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -11,3 +12,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* #add-med-button {
+  position: relative;
+  top: 0px;
+  left: 300px
+}
+
+#select-med-button {
+  position: relative;
+  top: 0px;
+  left: 150px
+} */
