--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+html {
+  background: #bebebe;
+  background-attachment: fixed;
+  height: 100%;
+  min-height: 100%;
+  scroll-behavior: smooth;
+}
+
+.wrapper {
+  background-color: #fff;
+  width: 70%;
+  margin: 0 15%;
+}
+
+body {
+  padding: 1rem 1rem 2rem 1rem;
+}
